crates/bpl/tests/snapshots/test__boogie__Test__test1__Orderings.snap.new
---
source: crates/bpl/tests/test.rs
assertion_line: 41
expression: snapshot_report
---
[Parsed]
[
    Type(
        TypeDecls {
            attrs: [],
            decls: [
                TypeDecl {
                    ident: "C",
                    type_params: [],
                    type_: None,
                },
            ],
        },
    ),
    Const(
        ConstDecl {
            attrs: [],
            is_unique: false,
            consts: TypedIdents {
                idents: [
                    "c1",
                ],
                type_: App(
                    TypeApp {
                        head: "C",
                        tail: None,
                    },
                ),
            },
            order_spec: None,
        },
    ),
    Const(
        ConstDecl {
            attrs: [],
            is_unique: false,
            consts: TypedIdents {
                idents: [
                    "c2",
                ],
                type_: App(
                    TypeApp {
                        head: "C",
                        tail: None,
                    },
                ),
            },
            order_spec: Some(
                OrderSpec {
                    parents: [
                        OrderSpecParent {
                            parent: "c1",
                            is_unique: false,
                        },
                    ],
                    is_complete: false,
                },
            ),
        },
    ),
    Const(
        ConstDecl {
            attrs: [],
            is_unique: false,
            consts: TypedIdents {
                idents: [
                    "c0",
                ],
                type_: App(
                    TypeApp {
                        head: "C",
                        tail: None,
                    },
                ),
            },
            order_spec: Some(
                OrderSpec {
                    parents: [
                        OrderSpecParent {
                            parent: "a",
                            is_unique: false,
                        },
                    ],
                    is_complete: false,
                },
            ),
        },
    ),
    Const(
        ConstDecl {
            attrs: [],
            is_unique: false,
            consts: TypedIdents {
                idents: [
                    "a",
                ],
                type_: Atom(
                    Int,
                ),
            },
            order_spec: None,
        },
    ),
]

[Printed]
type C;

const c1: C;

const c2: C extends c1;

const c0: C extends a;

const a: int;

[Input - ../../vendor/boogie/Test/test1/Orderings.bpl]
// RUN: %boogie -noVerify "%s" > "%t"
// RUN: %diff "%s.expect" "%t"

type C;

const c1:C;
const c2:C extends c1;
const c0:C extends a;         // error: parent of wrong type

const a:int;
